--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Harika Danduprolu</title>
-    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&family=JetBrains+Mono:wght@300;400;500&display=swap" rel="stylesheet">
+    <!-- Inside <head> -->
+<title>Harika Danduprolu – Portfolio</title>
+<meta name="description" content="Portfolio of Harika Danduprolu – Full-Stack Developer and AI Enthusiast" />
+<meta property="og:title" content="Harika Danduprolu – Portfolio" />
+<meta property="og:description" content="Explore my projects, resume, and skills." />
+<meta property="og:url" content="https://harikadanduprolu.me/" />
+<meta property="og:image" content="/path/to/preview-image.png" />
+
   </head>
 
   <body>
